Synced animation playback broken #4299

Closed
opened 2006-06-09 04:45:53 +02:00 by Randall Rickert · 3 comments

Group: current SVN version
Resolution: Fixed
Category: Animation system

%%%1. Go to Scene Buttons (F10), Anim/Playback Buttons context (the squiggly arrow).

  1. Turn on "Sync" button (doesn't matter if there's any audio in the scene).

  2. In 3D window, start animation playback (Alt+A).

The animation playback is broken. Instead of playing back the animation, it just flickers between the first frame and some extremely high frame number (which is not the last frame). The frame number in the cursor looks like 3647, but if I hit the spacebar to stop it seems to be 300000.

Blender current CVS
Mac OS X 10.4.6
nVidia GeForce 6800 GT%%%

**Group**: current SVN version **Resolution**: Fixed **Category**: Animation system %%%1. Go to Scene Buttons (F10), Anim/Playback Buttons context (the squiggly arrow). 2. Turn on "Sync" button (doesn't matter if there's any audio in the scene). 3. In 3D window, start animation playback (Alt+A). The animation playback is broken. Instead of playing back the animation, it just flickers between the first frame and some extremely high frame number (which is not the last frame). The frame number in the cursor looks like 3647, but if I hit the spacebar to stop it seems to be 300000. Blender current CVS Mac OS X 10.4.6 nVidia GeForce 6800 GT%%%

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#4299
No description provided.