source/blender/blenloader/intern/readfile.c
@@ -5408,6 +5408,7 @@ static void do_versions(FileData *fd, Library *lib, Main *main)
 			bScreen *sc;
 			
 			if(sce->jumpframe==0) sce->jumpframe= 10;
+			if(sce->audio.mixrate==0) sce->audio.mixrate= 44100;
 
 			if(sce->r.xparts<2) sce->r.xparts= 4;
 			if(sce->r.yparts<2) sce->r.yparts= 4;
